<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DynaSwitcher</string>
    <string name="toggle_wifi">Wifi</string>
    <string name="wifi_on">Wifi on</string>
    <string name="wifi_off">Wifi off</string>
    <string name="toggle_mobile">Mobile data</string>
    <string name="mobile_on">Mobile data on</string>
    <string name="mobile_off">Mobile data off</string>
    <string name="toggle_bluetooth">Bluetooth</string>
    <string name="bluetooth_on">Bluetooth on</string>
    <string name="bluetooth_off">Bluetooth off</string>
    <string name="toggle_gps">GPS</string>
    <string name="toggle_airplane">Airplane</string>
    <string name="toggle_brightness">Brightness</string>
    <string name="toggle_sync">Sync</string>
    <string name="toggle_rotation">Rotation</string>
    <string name="toggle_ringer">Sound</string>
    
    <string-array name="textview_array">
        <item >Button1</item>
        <item >Button2</item>
        <item >Button3</item>
        <item >Button4</item>
        <item >Button5</item>
        <item >Button6</item>
        <item >Button7</item>
        <item >Button8</item>
        <item >Button9</item>
    </string-array>

</resources>